--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
     "next": "14.1.0",
     "react": "18.3.0",
     "react-dom": "18.3.0",
-    "supabase": "^2.39.5"
+    "@supabase/supabase-js": "^2.39.5"
   }
 }
