--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
     "react": "18.3.0",
     "react-dom": "18.3.0",
     "@supabase/supabase-js": "^2.39.5"
-  }
+  },
+  **"devDependencies": {
+    "typescript": "^5.4.5",
+    "@types/react": "^18.3.0",
+    "@types/node": "^20.8.7"
+  }**
 }
